<resources>
    <string name="app_name">NotasApp</string>
    <string name="exposiciones">Exposiciones</string>
    <string name="proyecto">Proyecto</string>
    <string name="practicas">Prácticas</string>
    <string name="notaFina">Nota final</string>
    <string name="calcular">Calcular</string>
    <string name="porcentajes">Porcentajes (%)</string>
    <string name="guardar">Guardar</string>
    <string name="configuracion">Configuración</string>
</resources>
